# AviSynthPlus-grayworld

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: FindAvisynthPlus.cmake
msvc/: grayworld.sln  grayworld.vcxproj  grayworld.vcxproj.filters
src/: grayworld.cpp  grayworld.h  grayworld.rc  grayworld_avx2.cpp  grayworld_avx512.cpp  grayworld_sse2.cpp
src/avs/: grayworld_avs.cpp  grayworld_avs.h  grayworld_avs_avx2.cpp  grayworld_avs_avx512.cpp  grayworld_avs_sse2.cpp
src/common/: common.h  common_avx2.cpp  common_avx2.h  common_avx512.cpp  common_avx512.h  common_c.cpp  common_sse2.cpp  common_sse2.h
src/vs/: grayworld_vs.cpp  grayworld_vs.h  grayworld_vs_avx2.cpp  grayworld_vs_avx512.cpp  grayworld_vs_sse2.cpp
